# dice-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dice/: __init__.py
dice/evaluation/: registry.py
dice/evaluation/tests/: test_custom_evaluator.py
dice/execution/: config.py  evaluator.py  executor.py
dice/execution/tests/: test_config_max_explosions.py  test_double_evaluation.py  test_execute_complex.py  test_execute_safety.py  test_execute_total.py  test_execution_config.py  test_executor_deepcopy.py  test_operator_precedence.py
dice/grammar/: notation.py  parse_actions.py  parser.py
dice/grammar/tests/: test_broad_exception_handling.py  test_expression_length.py  test_modifier_limit.py  test_parenthetical_expression_text.py  test_parse_basic.py  test_parse_complex.py  test_parse_fate.py  test_parse_parenthetical.py
dice/modifiers/: __init__.py  base.py  clamp.py  compound.py  critical.py  drop.py  explode.py  failure.py  keep.py  parser.py  penetrate.py  registry.py  reroll.py  sort.py  target.py
dice/modifiers/tests/: test_bare_reroll.py  test_clamp.py  test_compound.py  test_critical.py  test_drop.py  test_explode.py  test_failure.py  (+12 more)
dice/rng/: roll.py
dice/terms/: __init__.py  dice_term.py  die_result.py  eval_helpers.py  fate_dice_term.py  function_term.py  group_term.py  grouping_term.py  numeric_term.py  operator_term.py  parenthetical_term.py  roll_expression.py
dice/tests/: test_integration.py  test_logging_hygiene.py
docs/: development-environment.md  dice-notation.md  evaluators.md  execution-tree.md  unit-tests.md
(+5 files in other folders)
