[project]
name = "dice"
version = "1.0.0a1"
description = "A Python dice rolling library with Roll20-compatible notation, typed execution trees, and pluggable evaluation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sean Quinn", email = "noreply@alkaemic.com" },
]
maintainers = [
    { name = "Alkaemic, LLC", email = "opensource@alkaemic.com" },
    { name = "Zack Root" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "pyparsing>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/alkaemic/dice-python"
Repository = "https://github.com/alkaemic/dice-python"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-mock>=3.14",
    "black>=26.0",
    "ruff>=0.11.0",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"dice/__init__.py" = ["F401"]  # barrel exports look unused
"dice/*/__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
